# Computer_Architecture_11201

./: .gitignore  .gitmodules  README.md
homework_1/: CMakeLists.txt  fp32tobf16.c  main.c  main.s  quiz1_b.s  round_function.c  test.c
homework_1/c_program/: CMakeLists.txt  main.c  round_function.c
homework_2/: Makefile  autorun.zsh  hw2.S  hw2.ld
homework_2/compile_C_program/: autorun.zsh  compile_O0.zsh  compile_O1.zsh  compile_O2.zsh  compile_O3.zsh  compile_Ofast.zsh  compile_Os.zsh  hw1.c
homework_2/optimization/: Makefile  autorun.zsh  hw2_optimization.S  hw2_optimization.ld
